[package]
name = "trace"
version = "0.1.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2018"
description = "Distributed tracing support within IOx"

[dependencies]

chrono = "0.4"
observability_deps = { path = "../observability_deps" }
parking_lot = "0.12"
rand = "0.8"

[dev-dependencies]
